...
                    }
                    Row(verticalAlignment = Alignment.CenterVertically) {
                        val selectTab: (Tab) -> Unit = {
                            haptics.performHapticFeedback(HapticFeedbackType.VirtualKey)
                            onTab(it)
                        }
                        NavItem(Tab.Journeys, tab.takeUnless { searchActive }, "Journeys", R.drawable.navigation_journeys, selectTab, Modifier.weight(1f))
                        NavItem(Tab.Explore, tab.takeUnless { searchActive }, "Explore", R.drawable.navigation_explore, selectTab, Modifier.weight(1f))
                        NavItem(Tab.Passport, tab.takeUnless { searchActive }, "Passport", R.drawable.navigation_passport, selectTab, Modifier.weight(1f))
                    }
                }
            }
        }
...
